--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,14 @@ add a selector for elements with class "item-watchlist"
 give these elements a display property of inline-block
 and then style them as shown in the example (padding, margin, background, etc)
 */
-
+.item-watchlist {
+	display: inline-block;
+	padding: 10px;
+	margin: 5px 5px 0px 0px;
+	border-width: 0px;
+	background: orange;
+	color: white;
+}
 
 /*
 TODO 5 
@@ -20,7 +27,9 @@ Make all elements have color: gray; by default
 Hint: just apply the style using a parent selector, and then all 
 descendent elements will automatically inherit the same styles
 */
-
+body {
+	color: gray;
+}
 
 #big-header {
 	background: gray;
@@ -51,6 +60,9 @@ ul {
 
 button, input[type="submit"] {
 	border-width: 0px;
+	padding: 5px;
+	background-color: orange;
+	color: white;
 	/*
 	TODO 7
 	give these buttons some padding, and color them orange with white text
